--- a/ki-stammbaum/package.json
+++ b/ki-stammbaum/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
+    "test": "^3.3.0",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
@@ -24,18 +25,18 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.1",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
+    "jsdom": "^24.0.0",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.4.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/test-utils": "^2.4.1",
-    "jsdom": "^24.0.0",
     "vitest": "^1.4.0"
   }
 }
