--- a/ki-stammbaum/package.json
+++ b/ki-stammbaum/package.json
@@ -23,20 +23,21 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@typescript-eslint/parser": "^8.34.0",
+    "@types/d3": "^7.4.3",
+    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/test-utils": "^2.4.1",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-vue": "^10.2.0",
-    "globals": "^16.2.0",
-    "jsdom": "^26.1.0",
-    "prettier": "^3.5.3",
-    "prettier-eslint": "^16.4.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0",
-    "vitest": "^3.2.3"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.8.0",
+    "jsdom": "^24.1.0",
+    "prettier": "^3.3.2",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.15.0",
+    "vitest": "^1.6.0"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "pnpm": {
